# master-pol

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_09_1943-20510f61b395_init.py  2025_06_11_0944-dc5a0ff4511f_make_inn_as_bigint.py  2025_06_11_2129-5e5af871abbe_create_rel_for_products_products_import.py  2025_06_15_2257-bece0cdda0c1_add_statuses_for_partners.py  2025_06_15_2305-f035437d96ba_update_constraints.py  2025_06_17_1049-d298c953953a_add_cascade_delete.py
src/: main.py  utils.py
src/api/v1/: __init__.py  schemas.py
src/api/v1/auth/: auth_service.py  dependencies.py  router.py  schemas.py
src/api/v1/guards/: jwt_guard.py
src/api/v1/users/: dependencies.py  router.py
src/core/: config.py  logger.py  middleware.py
src/infrastructure/admin/service/: __init__.py  abstract_service.py  base_service.py
src/infrastructure/database/: connection.py
src/infrastructure/database/enums/: partner_statuses.py  roles.py
src/infrastructure/database/models/: __init__.py  base_model.py  materials.py  partners.py  products.py  users.py  (+2 more)
src/infrastructure/security/: jwt.py
src/presentation/api/: __init__.py
src/presentation/front/: __init__.py  templates.py
src/static/css/: index.css  main.css  modals.css  notifications.css
src/static/html/: base.html  index.html  login.modal.html  register.modal.html
src/static/js/: api.js  auth.js  modals.js  notifications.js
temp/: dashboard-stats.tsx  main.admin.tsx  main.layout.tsx  main.recent-sales.tsx  overview.tsx  sidebar.tsx
(+109 files in other folders)
